--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -48,11 +48,11 @@
     "geist": "^1.4.2",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^14.2.32",
+    "next": "15.5.4",
     "next-themes": "^0.4.6",
-    "react": "^18.3.1",
+    "react": "19.1.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "2.1.7",
     "recharts": "2.15.4",
@@ -66,8 +66,8 @@
     "@netlify/plugin-nextjs": "^5.12.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^22.18.0",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "1.3.3",
@@ -75,5 +75,9 @@
   },
   "engines": {
     "node": "18.x"
+  },
+  "overrides": {
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9"
   }
 }
